--- a/app/index.html
+++ b/app/index.html
@@ -11,5 +11,19 @@
     
     <h1>Chu 홈페이지</h1>
 
+    <hr>
+
+    <form action="" class="join-area">
+        <label>아이디</label>
+        <input type="text" name="userId">
+        <label>비밀번호</label>
+        <input type="text" name="userPw">
+        <label>비밀번호 확인</label>
+        <input type="text" name="userPw2">
+        <label>닉네임</label>
+        <input type="text" name="userNick">
+        <input type="submit" value="회원가입">
+    </form>
+
 </body>
 </html>
