--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@
 
     <hr>
 
-    <form action="" class="join-area">
+    <form class="join-area" action="회원가입요청을처리하는서버주소" onsubmit="return handleJoin();">
         <label>아이디</label>
         <input type="text" name="userId">
         <label>비밀번호</label>
